fix link spacing

--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -39,6 +39,7 @@ h3 {
 
 .logo {
   margin-top: 0;
+  margin-left: 0;
   text-align: center;
 }
 
